--- a/public/form.html
+++ b/public/form.html
@@ -5,7 +5,11 @@
   </head>
   <body>
     <!-- This form is used by Netlify to detect the form fields -->
-    <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+    <form name="contact" method="POST" data-netlify="true" data-netlify-honeypot="bot-field" hidden>
+      <input type="hidden" name="form-name" value="contact" />
+      <p style="display: none;">
+        <label>Don't fill this out if you're human: <input name="bot-field" /></label>
+      </p>
       <input type="text" name="name" />
       <input type="email" name="email" />
       <textarea name="message"></textarea>
